<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/titlemargin"
        android:padding="@dimen/titlepadding"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/titlesize" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/edittextmargin"
        android:hint="@string/hintusername"
        android:textColor="@color/black"

        />

    <EditText
        android:id="@+id/et_userpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/edittextmargin"
        android:hint="@string/hintuserpass"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_userpassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/btnmargin"
        android:background="@drawable/button_background_shape"
        android:text="@string/btnsubmit"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textregisterlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_submit"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/btnmargin"
        android:text="@string/registrationlink"
        android:textColor="@color/linkcolor"
        android:textSize="@dimen/link" />
</RelativeLayout>